add: resources_addGoods_accessors
