# storage/api-docs/api-docs.json
@@ -117,7 +117,7 @@
                 }
             }
         },
-        "/api/order": {
+        "/api/v1/order": {
             "get": {
                 "tags": [
                     "Order"
@@ -156,7 +156,81 @@
                 ]
             }
         },
-        "/api/order/show/{id}": {
+        "/api/v1/good/add": {
+            "post": {
+                "tags": [
+                    "Add_Goods"
+                ],
+                "summary": "Adding a goods",
+                "operationId": "Adding a goods",
+                "parameters": [
+                    {
+                        "name": "order_id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "quantity",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "total_amount",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "400": {
+                        "description": "Bad request(something wrong with URL or parameters)"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    },
+                    "403": {
+                        "description": "Logged in but access to requested area is forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity (validation failed)"
+                    },
+                    "500": {
+                        "description": "General server error"
+                    }
+                },
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/order/show/{id}": {
             "get": {
                 "tags": [
                     "Order"
@@ -208,7 +282,7 @@
                 ]
             }
         },
-        "/api/order/add": {
+        "/api/v1/order/add": {
             "post": {
                 "tags": [
                     "Add_Order"
